--- a/html/css/style.css
+++ b/html/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
     color:#767676;
     background:#f1f2f7;
-    font-family:B Yekan,'Open Sans',sans-serif;
+    font-family:Yekan,B Yekan,'Open Sans',sans-serif;
     padding:0px !important;
     margin:0px !important;
     font-size:13px;
