--- a/html/css/style.css
+++ b/html/css/style.css
@@ -20,15 +20,15 @@ body {
     direction:rtl;
 }
 ul, .list-unstyled {
-    padding-left: 0px;
+    padding-right: 0px;
 }
 ul li {
     /*list-style:none;*/
 }
 
 a,a:hover,a:focus {
-    text-decoration:none;
     outline:none;
+    text-decoration:none;
 }
 ::selection {
     background:#1FB5AD;
@@ -71,7 +71,7 @@ a,a:hover,a:focus {
     font-size:18px;
     text-transform:uppercase;
     font-weight:300;
-    font-family:'Open Sans',sans-serif;
+    font-family:Yekan,'Open Sans',sans-serif;
     border-bottom:10px solid #a0b87e;
 }
 .form-signin .checkbox {
@@ -81,7 +81,7 @@ a,a:hover,a:focus {
     font-weight:normal;
     color:#b6b6b6;
     font-weight:300;
-    font-family:'Open Sans',sans-serif;
+    font-family:Yekan,'Open Sans',sans-serif;
 }
 .form-signin .form-control {
     position:relative;
@@ -108,11 +108,11 @@ a,a:hover,a:focus {
     color:#fff;
     text-transform:uppercase;
     font-weight:300;
-    font-family:'Open Sans',sans-serif;
+    font-family:Yekan,'Open Sans',sans-serif;
     margin:20px 0 5px;
 }
 .form-signin p {
-    text-align:left;
+    text-align:right;
     color:#b6b6b6;
     font-size:16px;
     font-weight:300;
@@ -2041,7 +2041,7 @@ ul.labels-info li a i {
 }
 
 ul.inbox-pagination {
-    float:right;
+    float:left;
 }
 ul.inbox-pagination li {
     float:left;
@@ -2207,7 +2207,7 @@ ul.inbox-pagination li {
 }
 
 .attachment-mail ul li  {
-    float: left;
+    float: right;
     width: 200px;
     margin-right: 15px;
     margin-top: 15px;
@@ -2247,7 +2247,6 @@ ul.inbox-pagination li {
     font-size:58px;
     font-weight:300;
     margin:0;
-    text-transform:uppercase;
 }
 .error-desk {
     background:rgba(0,0,0,0.05);
@@ -2274,6 +2273,8 @@ ul.inbox-pagination li {
     color:#fff;
     font-size:16px;
     font-weight:300;
+    text-align:right;
+    direction:rtl;
 }
 .back-btn:hover {
     background:#fff;
@@ -3148,7 +3149,7 @@ input:focus:invalid:focus,textarea:focus:invalid:focus,select:focus:invalid:focu
 .user-heading.alt {
     display:inline-block;
     width:100%;
-    text-align:left;
+    text-align:right;
 }
 .alt.gray-bg {
     background:#474751;
@@ -3160,13 +3161,12 @@ input:focus:invalid:focus,textarea:focus:invalid:focus,select:focus:invalid:focu
     color:#1fb5ad;
 }
 .user-heading.alt a {
-    float:left;
-    margin-right:15px;
-    margin-left:-10px;
+    float:right;
     display:inline-block;
     border:5px solid rgba(255,255,255,0.3);
     border-radius:50%;
     -webkit-border-radius:50%;
+    margin-right:-10px;
 }
 .user-heading.alt a img {
     width:85px;
@@ -3212,7 +3212,7 @@ input:focus:invalid:focus,textarea:focus:invalid:focus,select:focus:invalid:focu
 .twt-feed a {
     border-radius:50%;
     -webkit-border-radius:50%;
-    float:left;
+    float:right;
     margin:0 10px;
 }
 .twt-feed a img {
@@ -3477,7 +3477,7 @@ ul.clock-category li a:hover i,ul.clock-category li a.active i {
     bottom:9px;
     padding:12px;
     position:absolute;
-    right:15px;
+    left:15px;
 }
 .prd-row img {
     width:100%;
@@ -4418,7 +4418,7 @@ tr.odd.gradeX td.sorting_1,tr.even.gradeX td.sorting_1,table.display tr.even.gra
 .pricing-table ul li {
     margin:0 2em;
     padding:1em 0;
-    text-align:left;
+    text-align:right;
     font-weight:300;
 }
 .pricing-table ul li i {
